--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".BasketBallActivity"></activity>
         <activity android:name=".MotionActivity"></activity>
+        <activity android:name=".Motion2Activity"></activity>
     </application>
 
 </manifest>
